--- a/client/tetris/style.css
+++ b/client/tetris/style.css
@@ -1,3 +1,7 @@
+.container{
+    display: flex;
+}
+
 .grid{
     width: 200px;
     height: 400px;
@@ -15,4 +19,19 @@
 
 .shape {
     background-color: rgb(122, 39, 190);
+}
+
+.mini-grid {
+    margin-left: 50px;
+    width: 80px;
+    height: 80px;
+    display: flex;
+    flex-wrap: wrap;
+    background-color: aqua;
+}
+
+.mini-grid  div {
+    width: 20px;
+    height: 20px; 
+    
 }
