--- a/client/lab_8/style.css
+++ b/client/lab_8/style.css
@@ -35,7 +35,15 @@ html {
     background-color: rgb(239, 239, 239);
   }
   
-  
+  #map { 
+    height: 180px;
+    display: block;
+    width: 400px;
+    height: 300px;
+    border: 2px dashed(99,99,99);
+    margin-bottom: 1rem;
+   }
+
   a {
     display: inline-block;
     text-decoration: none;
